@@ -1,0 +1,6 @@
+http://ftp.rpmfind.net/linux/gnome.org/sources/
+ftp://ftp.gnome.org/pub/GNOME/sources
+ftp://ftp.cse.buffalo.edu/pub/Gnome/sources/
+http://ftp.unina.it/pub/linux/GNOME/sources/
+http://ftp.acc.umu.se/pub/GNOME/sources/
+http://ftp.belnet.be/mirror/ftp.gnome.org/sources/
