@@ -52,6 +52,7 @@ Changes in @NEW@:
       records listed within the shared library, if any. (CNY-699)
     * Malformed regular expressions passed as exceptDeps arguments to
       the r.Requires policy are now reported gracefully. (CNY-942)
+    * A list of GNOME mirrors has been added to the default mirrors. 
 
   o Bugfixes:
     * Files added in both the repository and locally with cvc now give an
